--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ toml = "^0.10.2"
 torch = "^2.0.0"
 pandas = "^2.0.0"
 numpy = "^1.24.2"
+tqdm = "^4.66"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
